[B]Version 1.0.4[/B]
- Fixed patching of RTMP URL

[B]Version 1.0.3[/B]
- Decode HTML entities in title, description, etc.

[B]Version 1.0.2[/B]
- Updated to use script.module.simplejson

[B]Version 1.0.1[/B]
- Fixed parsing and display of clip duration
- Now uses library module for Danish addons

[B]Version 1.0.0[/B]
- Initial version